@@ -1,3 +1,8 @@
+2004-11-15  Tom Yu  <tlyu@mit.edu>
+
+	* auth-proto.h, auth.c: Merge Athena changes for requiring
+	encrypted connections.
+
 2004-06-04  Ken Raeburn  <raeburn@mit.edu>
 
 	* Makefile.in (LIBBASE): Renamed from LIB.
